CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

PROJECT(zcalc)

SET(CMAKE_CXX_STANDARD 14)

IF(NOT MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Werror")
ENDIF()

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")

INCLUDE_DIRECTORIES(include)
ADD_SUBDIRECTORY(src)
